Security: refuse decrypt-to-String for large files; add MAX_DECRYPT_STRING_SIZE limit